# hello-agent

./: .gitignore  first-ai-agent-1.3.py  pyproject.toml
code/chapter01/: first-ai-agent-1.3.py
code/chapter03/transformer-demo/src/: config.py  tokenizer.py
code/chapter04/agents_demo/: llm_client.py
code/chapter04/agents_demo/plan_and_solve_demo/: plan_and_resolve.py  planner.py
code/chapter04/agents_demo/react_demo/: ReAct.py  tools.py
code/chapter04/agents_demo/reflection_demo/: memory.py
code/chapter06/agentscope_demo/: pyproject.toml
code/chapter06/autogen_demo/: output.code.md  pyproject.toml
code/chapter06/autogen_demo/code/agents/: code_reviewer.py
code/chapter06/camel_demo/: pyproject.toml
code/chapter07/hello_agents/agents/: simple_agent.py
code/chapter07/hello_agents/core/: agent.py  config.py  llm.py  message.py
code/chapter07/hello_agents/tools/: base.py  registry.py
code/chapter07/official_demo/: .env  hello_agents_demo.py  pyproject.toml
code/chapterfour/agents_demo/: pyproject.toml
code/chapterfour/agents_demo/plan_and_solve_demo/: executor.py
code/chapterfour/agents_demo/react_demo/: ReAct.py  tool_executor.py  tools.py
code/chapterfour/agents_demo/reflection_demo/: reflection.py
code/chaptersix/: .env
code/chaptersix/agentscope_demo/: pyproject.toml
code/chaptersix/agentscope_demo/sanguo_werewolf/: main_cn.py
code/chaptersix/autogen_demo/: output_code.py
code/chaptersix/autogen_demo/code/: main.py  model_client.py  team.py  test_model_client.py
code/chaptersix/autogen_demo/code/agents/: engineer.py  product_manager.py  user_proxy.py
code/chaptersix/camel_demo/: ai_science_popularization_ebook.py
code/chaptersix/langgraph_demo/: node.py  output.md  pyproject.toml  state.py  stategraph.py
code/chapterthree/: transformer.py
code/chapterthree/transformer-demo/: pyproject.toml
code/chapterthree/transformer-demo/data/: tiny.txt
code/chapterthree/transformer-demo/src/: infer.py  model.py  train.py
notes/: chapter03.md  chapter06.md  chapter07.md  chapterfour.md  chapterone.md  chaptersix.md  chaptertwo.md  chaptethree.md
