[project]
name = "hello-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "alwaysungry"}
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "match (>=0.3.2,<0.4.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "pdfplumber (>=0.11.8,<0.12.0)",
    "requests (>=2.32.5,<3.0.0)",
    "transformers (>=4.57.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
