[project]
name = "agents-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "alwaysungry"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "openai (>=2.14.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
