[project]
name = "agentscope-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Alwaysungry"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "agentscope (>=1.0.11,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
