[project]
name = "langgraph-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Alwaysungry"}
]
requires-python = ">=3.13, <3.15"
dependencies = [
    "langgraph (>=1.0.6,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.2.3,<2.0.0)",
    "tavily-python (>=0.7.17,<0.8.0)",
    "langchain-deepseek (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
