[project]
name = "transformer-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "alwaysungry"}
]
requires-python = ">=3.13,<3.15"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"